linked to ligamatchbe, localized, edge case handled